// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SamlAuth renders login button 1`] = `
<div>
  <mock-element
    data-props={{}}
    id="Row"
  >
    <strong>
      SAML Login
    </strong>
    <a
      className="btn modal-btn auth authorize"
      disabled={false}
      href="/saml/sso"
    >
      Start
    </a>
  </mock-element>
</div>
`;

exports[`SamlAuth renders logout button 1`] = `
<div>
  <mock-element
    data-props={{}}
    id="Row"
  >
    <strong>
      SAML Login
    </strong>
    <a
      className="btn modal-btn auth authorize"
      href="/saml/slo"
      onClick={[Function]}
    >
      Logout
    </a>
  </mock-element>
</div>
`;
